[package]
authors = ["Michael Vines <m@vin.es"]
categories = ["api-bindings"]
description = "Jupiter Aggregator API bindings"
edition = "2021"
license = "WTFPL"
name = "jup-ag"
readme = "README.md"
repository = "https://github.com/mvines/rust-jup-ag"
version = "0.8.0"

[dependencies]
base64 = "0.13"
bincode = "1"
itertools = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "1"
thiserror = "1"
tokio = "1"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
solana-client = "1"
spl-associated-token-account = "1"
spl-token = "3"
