[package]
authors = ["Michael Vines <m@vin.es"]
categories = ["api-bindings"]
description = "Jupiter Aggregator API bindings"
edition = "2021"
license = "WTFPL"
name = "jup-ag"
readme = "README.md"
repository = "https://github.com/mvines/rust-jup-ag"
version = "0.11.0"

[dependencies]
base64 = "0.22"
bincode = "1.3"
itertools = "0.13"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-pubkey = "3"
solana-sdk = "3"
thiserror = "2"
tokio = "1"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
solana-client = "3"
spl-associated-token-account = "8"
spl-token = "9"
